--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "gatsby-plugin-sharp": "^2.6.2",
     "gatsby-plugin-typography": "^2.5.1",
     "gatsby-source-filesystem": "^2.3.1",
+    "gatsby-theme-blog": "^1.6.2",
     "gatsby-transformer-sharp": "^2.5.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-typography": "^0.16.19",
+    "styled-components": "^5.1.0",
     "typography": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
   },
