--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "gatsby": "^2.21.22",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-emotion": "^4.3.1",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sharp": "^2.6.2",
+    "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-typography": "^2.5.1",
-    "gatsby-source-filesystem": "^2.3.1",
+    "gatsby-source-filesystem": "^2.3.3",
     "gatsby-theme-blog": "^1.6.2",
     "gatsby-transformer-sharp": "^2.5.2",
     "prop-types": "^15.7.2",
